style: user no longer has to scroll the entire page if they have too much taskbar. Only the dashboard will be scrollable on the y.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ body {
   justify-content: center;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 10px;
+  height: calc(100vh - 100px);
+  overflow-y:scroll;
+
 }
 #dashboard-div {
   background-color: var(--navy-blue);
